--- a/www/index.html
+++ b/www/index.html
@@ -15,7 +15,7 @@
   <!-- Login Page -->
   <div data-role="page" id="LoginPage">
     <header data-role="header" data-position="fixed" data-theme="c">
-      <h1>Backend Memo</h1>
+      <h1>Backend Todo</h1>
     </header>
       <section data-role="content">
       <h1>Sign in</h1>
@@ -23,7 +23,7 @@
         <input type="text" id="login_email">
       Password:
         <input type="password" id="login_password">
-      New to Backend Memo?
+      New to Backend Todo?
         <a href="#RegisterPage" data-role="button" data-mini="true" data-inline="true" data-theme="b">Register</a>
         <a href="#" id="LoginBtn" data-role="button" data-inline="false" data-theme="b">Login</a>
       </section>
@@ -32,7 +32,7 @@
   <!-- Register Page -->
   <div data-role="page" id="RegisterPage">
     <header data-role="header" data-position="fixed" data-theme="c">
-      <h1>Backend Memo</h1>
+      <h1>Backend Todo</h1>
     </header>
       <section data-role="content">
       <h1>Sign up</h1>
@@ -47,7 +47,7 @@
   <!-- List Page -->
   <div data-role="page" id="ListPage">
     <header data-role="header" data-position="fixed" data-theme="c">
-      <h1>Backend Memo</h1>
+      <h1>Backend Todo</h1>
       <a href="#AddPage" data-theme="b" data-icon="plus" class="ui-btn-right">Add</a>
       <a href="#yesNoDialog_logout" class="ui-btn-left" data-rel="popup" data-position-to="window" data-role="button" data-inline="true" data-transition="pop" data-theme="b">Logout</a>
     </header>
@@ -76,7 +76,7 @@
         </div>
         <div align="middle" data-role="content" data-theme="d" class="ui-corner-bottom ui-content">
           <h3 class="ui-title">
-          <p>Are you sure you want to delete this memo?</p>
+          <p>Are you sure you want to delete this todo?</p>
           <a href="#" id="YesBtn_delete" data-role="button" data-inline="true" data-transition="flow" data-theme="b">Yes</a>
           <a href="#" data-role="button" data-inline="true" data-rel="back" data-transition="flow" data-theme="b">No</a>
         </div>
@@ -84,23 +84,23 @@
     </section>
   </div>
 
-  <!-- Add Memo Page -->
+  <!-- Add Todo Page -->
   <div data-role="page" id="AddPage">
     <header data-role="header" data-position="fixed" data-theme="c">
       <a data-role="button" data-theme="b" data-rel="back" data-icon="back">Back</a>
-      <h1>Add Memo</h1>
+      <h1>Add Todo</h1>
     </header>
     <section data-role="content">
       <label for="title">Title:</label>
       <input type="text" id="title">
-      <label for="Memo">Memo:</label>
+      <label for="Todo">Todo:</label>
       <textarea id="content" style="height: 8em"></textarea>
       <a href="#" data-rel="dialog" data-transition="pop" data-theme="b" data-role="button" data-icon="check" id="SaveBtn">Save</a>
 
       <!--Dialog box of successful adding-->
       <div data-role="popup" id="okDialog_add" data-overlay-theme="a" data-theme="c" data-dismissible="false" style="max-width:400px;" class="ui-corner-all">
         <div align="middle" data-role="content" data-theme="d" class="ui-corner-bottom ui-content">
-          <p>A memo is successfully added!</p>
+          <p>A todo is successfully added!</p>
           <a href="#" data-role="button" id="OkBtn" data-inline="true" data-transition="flow" data-theme="b">OK</a>
         </div>
       </div>
@@ -119,23 +119,23 @@
     </section>
   </div>
 
-   <!-- Edit Memo Page -->
+   <!-- Edit Todo Page -->
   <div data-role="page" id="EditPage" data-cache="never">
     <header data-role="header" data-position="fixed" data-theme="c">
       <a data-role="button" data-theme="b" data-rel="back" data-icon="back">Back</a>
-      <h1>Edit Memo</h1>
+      <h1>Edit Todo</h1>
     </header>
     <section data-role="content">
       <label for="title_edit">Title:</label>
       <input type="text" id="title_edit">
-      <label for="Memo">Memo:</label>
+      <label for="Todo">Todo:</label>
       <textarea id="content_edit" style="height: 8em"></textarea>
       <a href="#" data-theme="b" data-role="button" data-icon="check" id="UpdateBtn">Update</a>
 
      <!--Dialog box of successful updating-->
       <div data-role="popup" id="okDialog_edit" data-overlay-theme="a" data-theme="c" data-dismissible="false" style="max-width:400px;" class="ui-corner-all">
         <div align="middle" data-role="content" data-theme="d" class="ui-corner-bottom ui-content">
-          <p>A memo is successfully updated!</p>
+          <p>A todo is successfully updated!</p>
           <a href="#" data-role="button" id="OkBtn" data-inline="true" data-transition="flow" data-theme="b">OK</a>
         </div>
       </div>
